fixes applied to enterprise code